# msp430-emulator

./: CMakeLists.txt  README.md  main.cpp  main.hpp  setup.sh
hardware/: instruction.cpp  instruction.hpp  microcontroller.cpp  microcontroller.hpp  msp.cpp  msp.hpp  port.cpp  port.hpp  register.hpp
interpreter/: interpreter.cpp  interpreter.hpp
resources/: main.asm  test.txt
